--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "type": "git",
     "url": "git@github.com:Auxx/forms-decor.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
+    "@angular/common": "^2.0.1",
+    "@angular/core": "^2.0.1",
+    "@angular/forms": "^2.0.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.12",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
