Fixed typings config, added required typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noEmitHelpers": false,
     "rootDir": "./src",
     "typeRoots": [
-      "../node_modules/@types"
+      "./node_modules/@types"
     ]
   },
   "compileOnSave": false,
