--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@angular/common": "^2.0.1",
     "@angular/core": "^2.0.1",
     "@angular/forms": "^2.0.1",
+    "@types/es6-shim": "^0.31.32",
+    "@types/reflect-metadata": "0.0.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
     "zone.js": "^0.6.25"
