--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "scripts": {},
   "dependencies": {
-    "@angular/common": "^2.0.1",
-    "@angular/core": "^2.0.1",
-    "@angular/forms": "^2.0.1",
+    "@angular/common": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/forms": "^2.1.1",
     "@types/es6-shim": "^0.31.32",
-    "@types/reflect-metadata": "0.0.4",
+    "@types/reflect-metadata": "0.0.5",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.12",
-    "zone.js": "^0.6.25"
+    "rxjs": "^5.0.0-rc.1",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "tslint": "^3.15.1",
