--- a/package.json
+++ b/package.json
@@ -2,20 +2,14 @@
   "name": "forms-decor",
   "version": "0.0.1",
   "license": "MIT",
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:Auxx/forms-decor.git"
   },
   "scripts": {},
   "dependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@types/es6-shim": "^0.31.32",
-    "@types/reflect-metadata": "0.0.5",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.1",
-    "zone.js": "^0.6.26"
+    "@angular/forms": "^2.0.0"
   },
   "devDependencies": {
     "tslint": "^3.15.1",
